fixing alignment problem on mainbar

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -45,6 +45,7 @@ a {
 .menu-logo {
 	float: left;
 	margin: 0 auto;
+	padding: 10px;
 	width: 32px;
 	height: 32px;
 }
